# tf_sample

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel
app/: BUILD.bazel  main.tf
live/: .terraform.lock.hcl  BUILD.bazel  main.tf  provider.tf
live/aws/west/: BUILD.bazel  provider.tf
live/one/: .terraform.lock.hcl  BUILD.bazel  main.tf
live/two/: .terraform.lock.hcl  BUILD.bazel  main.tf
tf/: BUILD.bazel  providers.bzl  rules.bzl  toolchain.bzl
