workspace(name = "tf_sample")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "terraform",
    build_file_content = """
filegroup(
    name = "file",
    srcs = ["terraform"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "",
    urls = [
        "https://releases.hashicorp.com/terraform/1.3.8/terraform_1.3.8_linux_amd64.zip",
    ],
)
