workspace(name = "tf_sample")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "terraform",
    build_file_content = """
exports_files(
    ['terraform'],
    visibility = ['//visibility:public']
)
""",
    sha256 = "9d9e7d6a9b41cef8b837af688441d4fbbd84b503d24061d078ad662441c70240",
    urls = [
        "https://releases.hashicorp.com/terraform/1.3.8/terraform_1.3.8_linux_amd64.zip",
    ],
)

http_archive(
    name = "terraform_provider_aws",
    build_file_content = """
exports_files(
    ['terraform-provider-aws_v4.55.0_x5'],
    visibility = ['//visibility:public']
)
""",
    urls = [
        "https://releases.hashicorp.com/terraform-provider-aws/4.55.0/terraform-provider-aws_4.55.0_linux_amd64.zip",
    ],
)
