workspace(name = "tf_sample")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "terraform_linux_amd64",
    build_file_content = """
exports_files(
    ['terraform'],
    visibility = ['//visibility:public']
)
""",
    sha256 = "9d9e7d6a9b41cef8b837af688441d4fbbd84b503d24061d078ad662441c70240",
    urls = [
        "https://releases.hashicorp.com/terraform/1.3.8/terraform_1.3.8_linux_amd64.zip",
    ],
)

http_archive(
    name = "terraform_darwin_amd64",
    build_file_content = """
exports_files(
    ['terraform'],
    visibility = ['//visibility:public']
)
""",
    sha256 = "3cb29f95962947b0dbdf3f83338121879426d723ba60007e7c264c3c8a2add8f",
    urls = [
        "https://releases.hashicorp.com/terraform/1.3.8/terraform_1.3.8_darwin_amd64.zip",
    ],
)

load("//tf:providers.bzl", "register_terraform_plugin", "terraform_plugin")

# TODO Does it make sense to unify more? It seems like there is a naming convention in terraform registry
register_terraform_plugin(
    name = "terraform_provider_aws_darwin_amd64",
    alias = "registry.terraform.io/hashicorp/aws/4.55.0/darwin_amd64/terraform-provider-aws",
    export_file = "terraform-provider-aws_v4.55.0_x5",
    sha256 = "41f6dcd90b54b623d523df8fb4a30779cfe22e9ab59516bc05b29291a7af0946",
    urls = [
        "https://releases.hashicorp.com/terraform-provider-aws/4.55.0/terraform-provider-aws_4.55.0_darwin_amd64.zip",
    ],
)

register_terraform_plugin(
    name = "terraform_provider_aws_linux_amd64",
    alias = "registry.terraform.io/hashicorp/aws/4.55.0/linux_amd64/terraform-provider-aws",
    export_file = "terraform-provider-aws_v4.55.0_x5",
    sha256 = "5dfc5b858a43cf45fde5542eb673f6104c14cdc3d73843d1b87a9e44545cbad4",
    urls = [
        "https://releases.hashicorp.com/terraform-provider-aws/4.55.0/terraform-provider-aws_4.55.0_linux_amd64.zip",
    ],
)

register_toolchains(
    "//tf:tf_darwin_amd64_toolchain",
    "//tf:tf_linux_amd64_toolchain",
)
