load("//tf:rules.bzl", "tf_apply", "tf_apply_plan", "tf_init", "tf_module", "tf_plan", "tf_provider")

tf_provider(
    name = "aws",
    plugin = "terraform-provider-aws",
)

tf_module(
    name = "module",
    srcs = [
        "main.tf",
    ],
    marker = ".tf_module",
    providers = [
        ":aws",
    ],
    deps = [
        "//app",
        "//live/one:module",
    ],
)

# "bazel run :init" generates lock file. It has to be stored under source control.
tf_init(
    name = "init",
    module = ":module",
)

# This one does not use pre-generated plan.
tf_apply(
    name = "apply",
    auto_approve = True,
    lock = ".terraform.lock.hcl",
    module = ":module",
)
